# r001_RUST

./: README.md
r001_hellow_word/: Cargo.toml
r002_hellow_word_cambiado/: Cargo.toml
r002_hellow_word_cambiado/src/: hellow_word.rs
r003_generate_fake_txt_data_file/: Cargo.toml
r003_generate_fake_txt_data_file/src/: main.rs
r003_generate_fake_txt_data_file_001/: Cargo.toml
r003_generate_fake_txt_data_file_001/src/: extract.rs  generate.rs  main.rs
