[package]
name = "r003_generate_fake_txt_data_file_001"
version = "0.1.0"
edition = "2021"

[dependencies]
fake = { version = "2.9", features = ["derive"] }

clap = { version = "4.4" , default-features = false, features = ["std", "env", "help"]}

serde = "1.0.136"
serde_json = "1.0.108"
rayon = "1.8"
polars = { version = "0.35", features = ["parquet"] }

[profile.release]
opt-level = 3